Add registration functionality

--- a/Frontend/src/app/styles/_variables.scss
+++ b/Frontend/src/app/styles/_variables.scss
@@ -6,6 +6,7 @@
   --primary: #8172e6;
   --secondary: #2086d9;
   --red: #8a3b50;
+  --green: #2ca98c;
 }
 
 .light {
@@ -16,4 +17,5 @@
   --primary: #9181eb;
   --secondary: #3a97e2;
   --red: #f36e57;
+  --green: #00c497;
 }
