--- a/Frontend/src/app/styles/globals.scss
+++ b/Frontend/src/app/styles/globals.scss
@@ -1,6 +1,7 @@
 @import 'https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:wght@700&display=swap';
 
 .body {
+  z-index: -2;
   margin: 0;
   background: linear-gradient(90deg, var(--primary) 0%, var(--secondary) 100%);
   color: var(--text);
@@ -9,6 +10,19 @@
   font-style: normal;
   overflow-x: hidden;
   transition: 0.2s;
+}
+
+.noise {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: url('/pictures/noise.png');
+  background-color: #00000015;
+  background-repeat: repeat;
+  background-size: 15vw;
+  opacity: 0.5;
 }
 
 h1,
