--- a/Frontend/src/components/ConfirmCodeForm/ConfirmCodeForm.module.scss
+++ b/Frontend/src/components/ConfirmCodeForm/ConfirmCodeForm.module.scss
@@ -40,7 +40,7 @@
 
   .resendText {
     text-align: center;
-    @include fontType(1.2rem, var(--text));
+    @include fontType(1.1rem, var(--text));
   }
 
   .resendButton {
@@ -48,10 +48,11 @@
     padding: 0;
     border: none;
     background: none;
-    @include fontType(1.2rem, var(--text));
+    @include fontType(1.1rem, var(--text));
   }
 
   .resendButtonText {
+    margin-bottom: 0;
     cursor: pointer;
     text-decoration: underline;
   }
@@ -68,6 +69,7 @@
   width: 100%;
   justify-content: space-between;
   padding-bottom: 1em;
+  margin-top: 1em;
 
   .button {
     width: 45%;
