--- a/Frontend/src/app/styles/globals.scss
+++ b/Frontend/src/app/styles/globals.scss
@@ -2,12 +2,13 @@
 
 .body {
   z-index: -2;
+  overflow: hidden;
+  margin: 0;
   background: linear-gradient(90deg, var(--primary) 0%, var(--secondary) 100%);
   color: var(--text);
   font-family: Montserrat, sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  overflow-x: hidden;
   transition: 0.2s;
 }
 
@@ -20,8 +21,13 @@
   background: url('/pictures/noise.png');
   background-color: #00000015;
   background-repeat: repeat;
-  background-size: 15vw;
+  background-size: 13vw;
   opacity: 0.5;
+
+  @include desktop {
+    background-size: 20vh;
+    opacity: 0.9;
+  }
 }
 
 h1,
