Add settings icon on a home page
Добавлен примерный макет главной страницы. Добавлено окно настроек с опциями выхода, удаления аккаунта, смены пароля и смены темы

--- a/Frontend/src/app/styles/_variables.scss
+++ b/Frontend/src/app/styles/_variables.scss
@@ -1,21 +1,21 @@
 .dark {
   --text: #dbe3eb;
-  --background: #383d3e;
-  --secondBackground: #4a4d4f;
+  --background: #4a4d4f;
+  --secondBackground: #383d3e;
   --secondText: #8a9597;
   --primary: #8172e6;
   --secondary: #2086d9;
-  --red: #8a3b50;
+  --red: #e76b6b;
   --green: #2ca98c;
 }
 
 .light {
-  --background: #dbe3eb;
-  --secondBackground: #ccd9e7;
   --text: #373838;
+  --secondBackground: #ccd9e7;
+  --background: #dbe3eb;
   --secondText: #7b8083;
   --primary: #9181eb;
   --secondary: #3a97e2;
-  --red: #f36e57;
+  --red: #e76b6b;
   --green: #00c497;
 }
