--- a/Frontend/src/ui/HideButton/HideButton.module.scss
+++ b/Frontend/src/ui/HideButton/HideButton.module.scss
@@ -15,7 +15,7 @@
     background-color: var(--text);
     opacity: 0;
     rotate: -50deg;
-    transition: 0.2s;
+    transition: opacity 0.2s;
   }
 
   .isHide {
