--- a/Frontend/src/components/ModalWindow/ModalWindow.module.scss
+++ b/Frontend/src/components/ModalWindow/ModalWindow.module.scss
@@ -21,31 +21,28 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--background);
-  opacity: 0.7;
+  animation: background-appearing 0.2s;
+  background-color: black;
+  opacity: 0.5;
 }
 
 .componentFrom {
-  position: relative;
   z-index: 10;
   display: inline-flex;
-  width: 45%;
+  overflow: hidden;
+  min-width: 25%;
   height: fit-content;
-  min-height: 35%;
-  max-height: 70%;
+  min-height: fit-content;
   box-sizing: border-box;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 2.5%;
-  border: 2px var(--text) solid;
-  border-radius: 10px;
+  border-radius: 6px;
+  animation: form-appearing 0.2s;
   background: var(--secondBackground);
-  gap: 1em;
+  gap: 0.5em;
 
   @include mediumDesktop {
     width: 70%;
     max-height: 75%;
-    padding: 5%;
   }
 
   @include bigTablet {
@@ -56,39 +53,70 @@
 
 .formHeader {
   display: inline-flex;
-  width: 100%;
+  width: calc(100% - 2em);
   align-items: center;
   justify-content: space-between;
+  padding-top: 1.5em;
+  padding-bottom: 1em;
+  background-color: var(--background);
+  padding-inline: 1em;
 
   .title {
-    width: 80%;
-    margin-left: 10%;
+    max-width: 60%;
     margin-block: 0;
-    text-align: center;
     @include fontType(2em);
   }
 
   .closeButton {
     width: 34px;
     height: 34px;
-    align-self: flex-start;
-    border: 2px var(--text) solid;
-    border-radius: 5px;
+    border: none;
     background: transparent;
     cursor: pointer;
-    outline: none;
     transition:
       border-color 0.2s,
       scale 0.2s;
-    @include cross(1.3em, 3px);
+    @include cross(2em, 3px);
 
     @include hover {
-      border-color: var(--red);
-
       &::after,
       &::before {
         background: var(--red);
       }
     }
+  }
+}
+
+.disappearing {
+  animation: disappearing 0.25s !important;
+}
+
+@keyframes form-appearing {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes background-appearing {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes disappearing {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
