--- a/Frontend/src/pages/AuthForm/AuthForm.module.scss
+++ b/Frontend/src/pages/AuthForm/AuthForm.module.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
-  background-color: var(--secondBackground);
+  background-color: var(--background);
   box-shadow: -1px 10px 200px -50px var(--background);
   gap: 2em;
   padding-block: 2em;
