--- a/Frontend/src/pages/Home/Home.module.scss
+++ b/Frontend/src/pages/Home/Home.module.scss
@@ -1,3 +1,10 @@
-div.root {
-  color: white;
+.root {
+  display: inline-flex;
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  justify-content: space-between;
+  gap: 1%;
+  padding-block: 30px;
+  padding-inline: 40px;
 }
