--- a/Frontend/src/ui/CustomButton/CustomButton.module.scss
+++ b/Frontend/src/ui/CustomButton/CustomButton.module.scss
@@ -3,7 +3,7 @@
   width: 70%;
   border: 2px var(--text) solid;
   border-radius: 7px;
-  background-color: var(--secondBackground);
+  background-color: var(--background);
   cursor: pointer;
   padding-block: 0.3em;
   place-items: center;
