Add side menu panel styles
Добавлены стили для панели меню, но функционал не реализован

--- a/Frontend/src/pages/Home/Home.module.scss
+++ b/Frontend/src/pages/Home/Home.module.scss
@@ -4,7 +4,10 @@
   height: 100vh;
   box-sizing: border-box;
   justify-content: space-between;
+  padding: 0;
   gap: 1%;
-  padding-block: 30px;
-  padding-inline: 40px;
+
+  @include bigTablet {
+    flex-direction: column-reverse;
+  }
 }
