--- a/Frontend/src/pages/Home/components/MessengerLists/MessengerLists.module.scss
+++ b/Frontend/src/pages/Home/components/MessengerLists/MessengerLists.module.scss
@@ -1,11 +1,12 @@
 .lists {
   width: 92%;
   height: 100%;
-  border-radius: 5px 20px 20px 5px;
   background-color: var(--background);
-  transition: width 1s;
+  transition:
+    width 1s,
+    background-color 0.2s;
 }
 
 .sideLists {
-  width: 30% !important;
+  width: 25% !important;
 }
