--- a/Frontend/src/ui/ChangeThemeIcon/ChangeThemeIcon.module.scss
+++ b/Frontend/src/ui/ChangeThemeIcon/ChangeThemeIcon.module.scss
@@ -1,4 +1,57 @@
 .icon {
   cursor: pointer;
   transition: 0.2s;
+  user-select: none;
+}
+
+.leftFade {
+  animation: left-fade 0.2s ease-in-out;
+}
+
+.rightFade {
+  animation: right-fade 0.2s ease-in-out;
+}
+
+@keyframes right-fade {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+
+  50% {
+    opacity: 0;
+    transform: translate(-20%, 0);
+  }
+
+  51% {
+    opacity: 0;
+    transform: translate(20%, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes left-fade {
+  0% {
+    opacity: 0;
+    transform: translate(0, 0);
+  }
+
+  50% {
+    opacity: 0;
+    transform: translate(20%, 0);
+  }
+
+  51% {
+    opacity: 0;
+    transform: translate(-20%, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
 }
