--- a/Frontend/src/pages/Home/components/Dialog/Dialog.module.scss
+++ b/Frontend/src/pages/Home/components/Dialog/Dialog.module.scss
@@ -1,8 +1,9 @@
 .dialog {
-  width: 74%;
+  width: 100%;
   height: 100%;
-  animation: appearing 0.5s;
-  background-color: var(--secondBackground);
+  animation: appearing 0.4s;
+  background-color: var(--background);
+  transition: background-color 0.2s;
 }
 
 @keyframes appearing {
@@ -12,7 +13,7 @@
   }
 
   100% {
-    width: 74%;
+    width: 100%;
     opacity: 1;
   }
 }
