--- a/Frontend/src/pages/Home/components/MessengerLists/MessengerLists.module.scss
+++ b/Frontend/src/pages/Home/components/MessengerLists/MessengerLists.module.scss
@@ -1,12 +1,16 @@
 .lists {
-  width: 92%;
+  min-width: 25%;
   height: 100%;
   background-color: var(--background);
   transition:
     width 1s,
     background-color 0.2s;
-}
 
-.sideLists {
-  width: 25% !important;
+  @include mediumDesktop {
+    min-width: 30%;
+  }
+
+  @include desktop {
+    min-width: 35%;
+  }
 }
