--- a/Frontend/src/ui/ChangeThemeIcon/ChangeThemeIcon.module.scss
+++ b/Frontend/src/ui/ChangeThemeIcon/ChangeThemeIcon.module.scss
@@ -5,21 +5,20 @@
 }
 
 .leftFade {
-  animation: left-fade 0.2s ease-in-out;
+  animation: left-fade 0.15s;
 }
 
 .rightFade {
-  animation: right-fade 0.2s ease-in-out;
+  animation: right-fade 0.15s;
 }
 
 @keyframes right-fade {
   0% {
-    opacity: 0;
+    opacity: 1;
     transform: translate(0, 0);
   }
 
   50% {
-    opacity: 0;
     transform: translate(-20%, 0);
   }
 
@@ -29,19 +28,18 @@
   }
 
   100% {
-    opacity: 1;
+    opacity: 0;
     transform: translate(0, 0);
   }
 }
 
 @keyframes left-fade {
   0% {
-    opacity: 0;
+    opacity: 1;
     transform: translate(0, 0);
   }
 
   50% {
-    opacity: 0;
     transform: translate(20%, 0);
   }
 
@@ -51,7 +49,7 @@
   }
 
   100% {
-    opacity: 1;
+    opacity: 0;
     transform: translate(0, 0);
   }
 }
