--- a/Frontend/src/app/styles/globals.scss
+++ b/Frontend/src/app/styles/globals.scss
@@ -10,6 +10,18 @@
   font-optical-sizing: auto;
   font-style: normal;
   transition: 0.2s;
+
+  ::-webkit-scrollbar {
+    position: absolute;
+    width: 8px;
+    border-radius: 5px;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: var(--text);
+  }
 }
 
 .noise {
