Add basic profile info changing
Добавлена возможность изменять информацию профиля. Всю, кроме фотографии

--- a/Frontend/src/pages/Home/components/Menu/components/MenuProfile/MenuProfile.module.scss
+++ b/Frontend/src/pages/Home/components/Menu/components/MenuProfile/MenuProfile.module.scss
@@ -12,7 +12,14 @@
     cursor: text;
   }
 
+  .modalInput {
+    width: calc(100% - 2em);
+    margin-block: 1em;
+    margin-inline: 1em;
+  }
+
   .name {
+    max-width: calc(100% - 2em);
     border: 2px solid transparent;
     background: transparent;
     margin-block: 1em;
